--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 rvm:
+  - 1.8.6
   - 1.8.7
   - 1.9.2
   - 1.9.3
@@ -10,5 +11,6 @@ rvm:
   - jruby-19mode
 matrix:
   allow_failures:
+    - rvm: 1.8.6
     - rvm: rbx-18mode
     - rvm: rbx-19mode
