--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ matrix:
     - rvm: ruby-head
     - rvm: rbx-19mode
     - rvm: jruby-19mode
+env:
+  - CODECLIMATE_REPO_TOKEN=62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
