--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ matrix:
     - rvm: jruby-head
 env:
   - CODECLIMATE_REPO_TOKEN=62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
+sudo: false
