--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,13 @@ rvm:
   - 2.3.0
   - ruby-head
   - rbx-head
-  - jruby-head
 matrix:
+  include:
+    - rvm: jruby
+      env: JRUBY_OPTS="--2.0"
   allow_failures:
     - rvm: ruby-head
     - rvm: rbx-head
-    - rvm: jruby-head
 env:
   - CODECLIMATE_REPO_TOKEN=62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
 sudo: false
