--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ rvm:
   - 2.3.0
   - ruby-head
   - rbx-head
+  - jruby
 matrix:
-  include:
-    - rvm: jruby
-      env: JRUBY_OPTS="--2.0"
   allow_failures:
     - rvm: ruby-head
     - rvm: rbx-head
