--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ rvm:
   - 2.0
   - 2.1
   - 2.2
-  - 2.3.0
+  - 2.3.3
   - ruby-head
   - rbx-head
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: rbx-head
-env:
-  - CODECLIMATE_REPO_TOKEN=62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
 sudo: false
+addons:
+  code_climate:
+    repo_token: 62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
