--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,5 @@ sudo: false
 addons:
   code_climate:
     repo_token: 62d082406430ccf662c2e401976b613c0091e26fcfb546f92b1f2b391951cf50
+env:
+  - START_SIMPLECOV=1
