--- a/.all_images.yml
+++ b/.all_images.yml
@@ -10,7 +10,7 @@ script: &script |-
   rake test
 
 images:
-  ruby:3.1-rc-alpine: *script
+  ruby:3.1-alpine: *script
   ruby:3.0-alpine: *script
   ruby:2.7-alpine: *script
   ruby:2.6-alpine: *script
