--- a/.all_images.yml
+++ b/.all_images.yml
@@ -1,5 +1,6 @@
 dockerfile: |-
   RUN apk add --no-cache build-base git
+  RUN gem update --system
   RUN gem install gem_hadar bundler
 
 script: &script |-
