--- a/.all_images.yml
+++ b/.all_images.yml
@@ -13,6 +13,7 @@ script: &script |-
 fail_fast: yes
 
 images:
+  ruby:3.3-alpine: *script
   ruby:3.2-alpine: *script
   ruby:3.1-alpine: *script
   ruby:3.0-alpine: *script
