--- a/.all_images.yml
+++ b/.all_images.yml
@@ -7,7 +7,7 @@ script: &script |-
   echo -e "\e[1m"
   ruby -v
   echo -e "\e[0m"
-  bundle update
+  bundle install --full-index
   bundle exec rake test
 
 fail_fast: yes
