Added support for Ruby 3.4 Alpine image
- Updated `.all_images.yml` to include Ruby 3.4-alpine environment.
- Added `ruby:3.4-alpine` to the list of supported images.
- Now uses **3.4** instead of **3.3**, **3.2**, and **3.1** for ruby versions.

--- a/.all_images.yml
+++ b/.all_images.yml
@@ -1,6 +1,5 @@
 dockerfile: |-
   RUN apk add --no-cache build-base git
-  RUN gem update --system
   RUN gem install gem_hadar bundler
 
 script: &script |-
@@ -13,6 +12,7 @@ script: &script |-
 fail_fast: yes
 
 images:
+  ruby:3.4-alpine: *script
   ruby:3.3-alpine: *script
   ruby:3.2-alpine: *script
   ruby:3.1-alpine: *script
