Update Dockerfile to include yaml-dev package
- Added `yaml-dev` package to the `apk add` command in the Dockerfile
- This ensures proper YAML development headers are available during build process

--- a/.all_images.yml
+++ b/.all_images.yml
@@ -1,5 +1,5 @@
 dockerfile: |-
-  RUN apk add --no-cache build-base git
+  RUN apk add --no-cache build-base yaml-dev git
   RUN gem install gem_hadar bundler
 
 script: &script |-
