--- a/.all_images.yml
+++ b/.all_images.yml
@@ -1,15 +1,17 @@
 dockerfile: |-
   RUN apk add --no-cache build-base yaml-dev git
+  RUN gem update --system
+  RUN gem install bundler gem_hadar
 
 script: &script |-
-  gem install bundler -v $(ruby -e "print File.read('Gemfile.lock').scan(/^BUNDLED WITH\s+(\d+\.\d+\.\d+)/).flatten.first")
   echo -e "\e[1m"
   ruby -v
   echo -e "\e[0m"
-  bundle install
-  bundle exec rake test
+  bundle update
+  bundle install --jobs=$(getconf _NPROCESSORS_ONLN)
+  rake test RUBYOPT="--enable-frozen-string-literal --debug-frozen-string-literal"
 
-fail_fast: yes
+fail_fast: true
 
 images:
   ruby:3.4-alpine: *script
