Add code indexer configuration and update documentation
- Add `code_indexer` block to `.utilsrc` with verbose mode disabled and list of gems
- Update `README.md` with comprehensive description, features, installation, and usage instructions
- Rename `COPYING` file to `LICENSE`
- Replace `LetScope` implementation with `Tins::DynamicScope` in `examples/let.rb`
- Fix formatting in `lib/tins/dslkit.rb` for `dsl_lazy_accessor` method
- Update `tins.gemspec` to reference `LICENSE` instead of `COPYING` and update file list accordingly

--- a/.utilsrc
+++ b/.utilsrc
@@ -22,3 +22,21 @@ end
 ssh_tunnel do
   terminal_multiplexer :tmux
 end
+
+code_indexer do
+  verbose false
+
+  gems = %w[
+    bigdecimal
+    mize
+    test-unit
+    stringio
+    sync
+    term-ansicolor
+    xdg
+  ]
+
+  paths {
+    %w[ lib ] + gems.map { `bundle show #{it}` }.map(&:chomp)
+  }
+end
