Update gem list in code indexer configuration
- Added `base64`, `date`, and `json` gems to the list
- Removed `xdg` gem from the list
- Reordered `mize` and `ostruct` gems
- Moved `test-unit` gem to the end of the list
- Updated **mize** gem version requirement in configuration file

--- a/.utilsrc
+++ b/.utilsrc
@@ -27,13 +27,17 @@ code_indexer do
   verbose false
 
   gems = %w[
+    base64
     bigdecimal
+    date
+    json
     mize
-    test-unit
+    mize
+    ostruct
     stringio
     sync
     term-ansicolor
-    xdg
+    test-unit
   ]
 
   paths {
