Update static analysis workflow to install gem_hadar gem

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,7 @@ jobs:
           ruby-version: '3.4'
       - name: Generate Documentation
         run: |
+          gem install gem_hadar
           bundle install
           rake doc
       - name: Upload artifact
