--- a/.all_images.yml
+++ b/.all_images.yml
@@ -7,7 +7,7 @@ script: &script |-
   echo -e "\e[1m"
   ruby -v
   echo -e "\e[0m"
-  bundle update
+  bundle update --all
   bundle install --jobs=$(getconf _NPROCESSORS_ONLN)
   rake test RUBYOPT="--enable-frozen-string-literal --debug-frozen-string-literal"
 
